--- a/ClientContacts/ClientContacts.fsproj
+++ b/ClientContacts/ClientContacts.fsproj
@@ -59,8 +59,10 @@
     <None Include="App.config" />
     <Content Include="packages.config" />
     <Compile Include="Contact.fs" />
+    <Compile Include="ElmishUtils.fs" />
     <Compile Include="SQLConnection.fs" />
     <Compile Include="ContactList.fs" />
+    <Compile Include="ContactInfoBox.fs" />
     <Compile Include="MainWindow.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
