Change ContactInfoBox edit functionality - update all fields together rather than individual fields

--- a/ClientContacts/ClientContacts.fsproj
+++ b/ClientContacts/ClientContacts.fsproj
@@ -63,6 +63,7 @@
     <Compile Include="ElmishUtils.fs" />
     <Compile Include="SQLConnection.fs" />
     <Compile Include="ContactList.fs" />
+    <Compile Include="ContactInfoBoxValidator.fs" />
     <Compile Include="ContactInfoBox.fs" />
     <Compile Include="MainWindow.fs" />
     <Compile Include="Program.fs" />
