Include ContactInfoBoxBindingManager in the project file

--- a/ClientContacts/ClientContacts.fsproj
+++ b/ClientContacts/ClientContacts.fsproj
@@ -64,6 +64,7 @@
     <Compile Include="SQLConnection.fs" />
     <Compile Include="ContactList.fs" />
     <Compile Include="ContactInfoBoxValidator.fs" />
+    <Compile Include="ContactInfoBoxBindingsManager.fs" />
     <Compile Include="ContactInfoBox.fs" />
     <Compile Include="MainWindow.fs" />
     <Compile Include="Program.fs" />
