--- a/ClientContacts/ClientContacts.fsproj
+++ b/ClientContacts/ClientContacts.fsproj
@@ -63,7 +63,7 @@
     <Compile Include="ElmishUtils.fs" />
     <Compile Include="SQLConnection.fs" />
     <Compile Include="ContactList.fs" />
-    <Compile Include="ContactInfoBoxValidator.fs" />
+    <Compile Include="Validator.fs" />
     <Compile Include="ContactInfoBoxBindingsManager.fs" />
     <Compile Include="LocationPopup.fs" />
     <Compile Include="ContactInfoBox.fs" />
