--- a/ClientContactViews/ClientContactViews.csproj
+++ b/ClientContactViews/ClientContactViews.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BoolToVisibilityColapsedConverter.cs" />
+    <Compile Include="CollectionViewGroupToNegatedVisibilityConverter.cs" />
     <Compile Include="CollectionViewGroupToVisibilityConverter.cs" />
     <Page Include="AnimatedBar.xaml">
       <SubType>Designer</SubType>
