--- a/ClientContactViews/ClientContactViews.csproj
+++ b/ClientContactViews/ClientContactViews.csproj
@@ -128,6 +128,7 @@
       <DependentUpon>InfoBoxLoading.xaml</DependentUpon>
     </Compile>
     <Compile Include="InputBindingManager.cs" />
+    <Compile Include="IntToVisibilityConverter.cs" />
     <Compile Include="ListLoading.xaml.cs">
       <DependentUpon>ListLoading.xaml</DependentUpon>
     </Compile>
