--- a/ClientContacts/App.config
+++ b/ClientContacts/App.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <connectionStrings>
+        <clear />
+        <!--This node is required to clear inherited connection strings from machine.config-->
+        <add name="connection" connectionString="Server=EMILIYAN;Database=test;Integrated Security=true" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+
 </configuration>
