--- a/ClientContacts/ClientContacts.fsproj
+++ b/ClientContacts/ClientContacts.fsproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>cb82e9ca-bc1b-4c4a-af9c-46f52763bc86</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>ClientContacts</RootNamespace>
     <AssemblyName>ClientContacts</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
